--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                           <div class="lorem-part mb-3">
                               <p><span class="thick">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span> Lorem<br> Ipsum has been the industry's standard dummy text ever since the 1500s, when an<br> unknown printer took a galley of type and scrambled it to make a type specimen book.<br> It has survived not only five centuries, but also the leap into electronic typesetting, remaining<br> essentially unchanged.</p>
                           </div>
-                          <div class="info d-flex gap-3">
+                          <div class="info d-flex gap-3 info">
                               <img src="simple-soul-img/Vector1.png" alt="vector" style="width: 4%; height:auto;">
-                              <h4><span class="thick">More</span> info</h4>
+                              <a href="event.html"><h4 class="text-light"><span class="thick">More</span> info</h4></a>
                           </div>
                       </div>
                   </div>
@@ -249,7 +249,7 @@
                         </div>
                         <div class="info d-flex gap-3">
                             <img src="./thia-img/Vector.png" alt="vector" style="width: 3%; height:3vh">
-                            <h4><span class="thick">More</span> info</h4>
+                            <a href="event.html"><h4 class="text-dark"><span class="thick">More</span> info</h4></a>
                         </div>
                         <div class="group" >
                             <img src="./thia-img/Group 32.png" alt="group" class="d-flex justify-content-end group">
@@ -287,9 +287,9 @@
                         specimen book. it has survived not only five centuries, but also the leap into 
                         electronic typesetting, remaining especially unchanged. 
                         </p>
-                        <div class="content d-flex ps-2">
+                        <div class="content d-flex ps-2 info">
                             <img src="khalid-img/logo.png" alt="logo" style="height: 18px;">
-                            <p class="ps-2 mb-0" style="color: white; "><span class="fw-bold">More</span> Info</p>
+                            <a href=""><p class="ps-2 mb-0" style="color: white; "><span class="fw-bold">More</span> Info</p></a>
                         </div>
                     </div>
                     <div class="content-image text-end ">
