--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         </div>
                         <div class="info d-flex gap-3">
                             <img src="./thia-img/Vector.png" alt="vector" style="width: 3%; height:3vh">
-                            <a href="event.html"><h4 class="text-dark"><span class="thick">More</span> info</h4></a>
+                            <a href="incentive.html"><h4 class="text-dark"><span class="thick">More</span> info</h4></a>
                         </div>
                         <div class="group" >
                             <img src="./thia-img/Group 32.png" alt="group" class="d-flex justify-content-end group">
@@ -289,7 +289,7 @@
                         </p>
                         <div class="content d-flex ps-2 info">
                             <img src="khalid-img/logo.png" alt="logo" style="height: 18px;">
-                            <a href=""><p class="ps-2 mb-0" style="color: white; "><span class="fw-bold">More</span> Info</p></a>
+                            <a href="daura.html"><p class="ps-2 mb-0" style="color: white; "><span class="fw-bold">More</span> Info</p></a>
                         </div>
                     </div>
                     <div class="content-image text-end ">
